--- a/showroom.html
+++ b/showroom.html
@@ -26,7 +26,7 @@
      <label class="toggle" for="menu-bar">Showroom</label>
 
     <nav class="navbar">
-        <a class="meu" href="#Home">Home</a>
+        <a class="meu" href="index.html">Home</a>
         <a class="meu" href="aboutUs.html">About</a>
         <a class="meu" href="showroom.html">Showroom</a>
         <a class="meu" href="gallery.html">Gallery</a>
@@ -34,29 +34,6 @@
         <a class="meu" href="register.html">Sign In</a>
     </nav> 
 </header>
-
-<section class="home" id="Home">
-    <div class="slide" style="background-image: url(images/bent-removebg-preview.png);">
-        <div class="content">
-            <h3 class="head">Welcome to our car dealership <br>Find your dream car <br>Classic, Sporty and Luxirias cars</h3>
-            <a href="#Menu" class="btn" id="bt">View Our Show room</a>
-        </div>
-        
-    </div>
-</section>
-
-<section class="about" id="About">
-    <h1 class="heading"><span>About</span>Us</h1>
-    <div class="row">
-         <div class="image">
-            <iframe width="560" height="315" src="https://www.youtube.com/embed/SBQlKwZnIFA?si=-YtqOMwpUOuKzXwG?controls=0&mute=1&showinfo=0&rel=0&autoplay=1"></iframe>
-        </div>
-        <div class="content">
-            <h2>ClassicCars Where the margin happens</h2>
-            <p>ClassicCars is a car dealership company that brings exotic, luxaries, sporty and adventurers cars at your door step. We offer test drivers for our customers in cars that captivate them</p>
-        </div>
-    </div>
-</section>
 
 <section class="menu" id="Menu">
     <h1 class="heading"><span>Our</span>Showroom</h1>
@@ -108,7 +85,7 @@
             </div>
             <div class="menu-info">
                 <h2>Ford</h2>
-                <h3>Starting at: $30, 920</h3>
+                <h3>Starting at: $30,920</h3>
                 <hr>
                 <p>Accessible perfomance</p>
                 <p>5.0 liter V8</p>
@@ -144,82 +121,6 @@
     </div>
 </section>
 
-<section class="gallery" id="Gallery">
-    <h1 class="heading">Our<span>Gallery</span></h1>
-    <div class="grid">
-        <div class="image-wrapper">
-            <img src="images/AudiR8.jpg" alt="">
-            <div class="cont fade">
-                <p>Audi R8</p>
-            </div>
-        </div>
-        <div class="image-wrapper">
-            <img src="images/genesis.jpeg" alt="">
-            <div class="cont fade">
-                <p>Genesis</p>
-            </div>
-        </div>
-        <div class="image-wrapper">
-            <img src="images/DBS770.jpg" alt="">
-            <div class="cont fade">
-                <p>Aston Martin DBS 770</p>
-            </div>
-        </div>
-        <div class="image-wrapper">
-            <img src="images/stringer.jpeg" alt="">
-            <div class="cont fade">
-                <p>Stinger</p>
-            </div>
-        </div>
-        <div class="image-wrapper">
-            <img src="images/gv80.jpeg" alt="">
-            <div class="cont fade">
-                <p>Genesis GV80</p>
-            </div>
-        </div>
-        <div class="image-wrapper">
-            <img src="images/ford.jpeg" alt="">
-            <div class="cont fade">
-                <p>Ford</p>
-            </div>
-        </div>
-        <div class="image-wrapper">
-            <img src="images/kia.jpeg" alt="">
-            <div class="cont fade">
-                <p>Kia</p>
-            </div>
-        </div>
-        <div class="image-wrapper">
-            <img src="images/X5M.jpeg" alt="">
-            <div class="cont fade">
-                <p>BMW X5M</p>
-            </div>
-        </div>
-    </div>
-</section>
- <section class="contact" id="Contact Us">
-    <h1 class="heading"><span>Contact</span>Us</h1>
-    <div class="signupFrm">
-        <form  action=""class="form">
-
-            <div class="inputContainer">
-                <input type="text" class="input" id="name" placeholder="name" required>
-            </div>
-
-            <div class="inputContainer">
-                <input type="email" class="input" id="email" placeholder="email" required>
-            </div>
-
-            <div class="inputContainer">
-                <textarea name="message" id="message" cols="30" rows="10" placeholder="How can I help you"></textarea>
-            </div>
-
-            <button type="send" class="submitBtn" onclick="sendMail()" >Send</button>
-
-        </form>
-    </div>  
-</section>
-
 <section class="foot">
     <div class="footer">
         <div class="row">
@@ -246,65 +147,5 @@
         <p class="copy"> ClassicCars &copy 2024 - All rights reserved</p>
     </div>
 </section>
-
-
-
-
-
-
- 
-
-   
-
-
-
-
-
- 
- 
- 
- 
- 
- 
- 
- 
- 
- 
- 
- 
- 
- 
-<script>
-     function sendMail() {
-        var params = {
-        name: document.getElementById("name").value,
-        email: document.getElementById("email").value,
-        message: document.getElementById("message").value,
-    };
-    const serviceID = "service_07sx749";
-    const templateID = "template_5p1k56w";
-
-    emailjs.send(serviceID,templateID,params)
-    .then(
-        res =>{
-            document.getElementById("name").value="";
-            document.getElementById("email").value="";
-            document.getElementById("message").value="";
-            console.log(res);
-            alert("Your message sent successfully");
-    
-        }
-    )
-    .catch((err) => console.log(err));
-    ;
-}
-
-</script>
-
-
-
-
-
-  
 </body>
 </html>
